--- a/app/src/main/res/drawable/input.xml
+++ b/app/src/main/res/drawable/input.xml
@@ -4,9 +4,9 @@
     <item android:state_enabled="true">
 
         <shape android:shape="rectangle">
-        <solid android:color="@android:color/white"/>
-        <corners android:radius="10dp"/>
-        <stroke android:color="@android:color/darker_gray" android:width="1dp"/>
+            <solid android:color="@android:color/transparent"/>
+            <corners android:radius="10dp"/>
+            <stroke android:color="@android:color/transparent" android:width="1dp"/>
 
         </shape>
     </item>
