--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -19,12 +19,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView3"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/pic"
 
             android:layout_width="100dp"
             android:layout_height="100dp"
-            app:srcCompat="@drawable/logophoto"
+            android:src="@drawable/logophoto"
 
             />
 
@@ -36,7 +36,7 @@
             android:textSize="18sp"
             android:textStyle="bold"
 
-            ></TextView>
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
             android:text="Email"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
