--- a/app/src/main/res/layout/activity_ray_uploaded.xml
+++ b/app/src/main/res/layout/activity_ray_uploaded.xml
@@ -33,7 +33,7 @@
         app:srcCompat="@drawable/icon2" />
 
     <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/image_ray"
         android:layout_width="515dp"
         android:layout_height="384dp"
         android:layout_marginBottom="268dp"
@@ -56,13 +56,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.137"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView16" />
+        app:layout_constraintTop_toBottomOf="@+id/image_ray" />
 
     <ImageView
-        android:id="@+id/imageView19"
+        android:id="@+id/choose"
         android:layout_width="216dp"
-        android:layout_height="138dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
