--- a/app/src/main/res/layout/activity_eyes_image.xml
+++ b/app/src/main/res/layout/activity_eyes_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RayUploaded">
+    tools:context=".eyes_image">
 
     <TextView
         android:id="@+id/textView18"
@@ -34,14 +34,15 @@
 
     <ImageView
         android:id="@+id/image_ray"
-        android:layout_width="515dp"
-        android:layout_height="350dp"
+        android:layout_width="370dp"
+        android:layout_height="384dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="268dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView13"
-        app:srcCompat="@drawable/upload" />
+        app:layout_constraintTop_toBottomOf="@+id/textView18"
+        app:srcCompat="@drawable/eyes_bro" />
 
     <TextView
         android:id="@+id/textView24"
@@ -50,11 +51,11 @@
         android:layout_marginStart="33dp"
         android:layout_marginEnd="117dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Please Upload Your rays"
+        android:text="Please take a picture of yours eyes"
         android:textColor="@color/color2"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_ray" />
 
@@ -62,7 +63,7 @@
         android:id="@+id/choose"
         android:layout_width="216dp"
         android:layout_height="200dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
