--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -7,18 +7,6 @@
     android:background="@color/ic_launcher_background"
     tools:context=".ForgetPassword">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="557dp"
-        android:layout_height="336dp"
-        android:background="@drawable/path_620"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </LinearLayout>
-
     <View
         android:id="@+id/view"
         android:layout_width="302dp"
@@ -31,17 +19,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.496" />
 
-    <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="223dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="57dp"
-        android:layout_marginEnd="57dp"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        app:srcCompat="@drawable/mesa_de_trabajo_7" />
 
     <TextView
         android:id="@+id/textView15"
@@ -53,15 +30,17 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.234" />
 
     <EditText
         android:id="@+id/txt_old_password"
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
@@ -81,9 +60,11 @@
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="10dp"
         android:background="@drawable/custom_input"
+        android:drawableRight="@drawable/visibility_off_icon"
+        android:drawableTint="#ACACAC"
         android:ems="10"
         android:hint="@string/new_pass"
         android:inputType="text"
@@ -94,7 +75,7 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/txt_old_password" />
+        app:layout_constraintTop_toBottomOf="@+id/authentication" />
 
     <EditText
         android:id="@+id/txt_confirm_password"
@@ -103,7 +84,9 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
+        android:drawableRight="@drawable/visibility_off_icon"
         android:background="@drawable/custom_input"
+        android:drawableTint="#ACACAC"
         android:ems="10"
         android:hint="@string/confirm_pass"
         android:inputType="text"
@@ -131,6 +114,23 @@
         app:layout_constraintEnd_toEndOf="@+id/view"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password"
+        app:layout_constraintVertical_bias="0.312" />
+
+    <Button
+        android:id="@+id/authentication"
+        android:layout_width="205dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="48dp"
+        android:background="@drawable/custom_button"
+        android:text="@string/authentication"
+        android:textAllCaps="false"
+        android:textColor="@color/color3"
+        app:layout_constraintEnd_toEndOf="@+id/view"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        app:layout_constraintTop_toBottomOf="@+id/txt_old_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
