--- a/app/src/main/res/layout/activity_lung_doc1.xml
+++ b/app/src/main/res/layout/activity_lung_doc1.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bback"
-    tools:context=".shared_doc1">
+    android:background="@drawable/lungback"
+    tools:context=".lung_doc1">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -17,7 +17,7 @@
         android:layout_marginTop="59dp"
         android:layout_marginEnd="201dp"
         android:transitionName="imagetransaction"
-        app:srcCompat="@drawable/pic1" />
+        app:srcCompat="@drawable/lung_pic1" />
 
     <TextView
         android:id="@+id/textView6"
@@ -123,4 +123,5 @@ Street 15, District One - Fifth Settlement, Medical Park 1
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
+
 </RelativeLayout>
