--- a/app/src/main/res/layout/activity_patient_edit.xml
+++ b/app/src/main/res/layout/activity_patient_edit.xml
@@ -51,14 +51,11 @@
         android:layout_height="48dp"
         android:layout_marginTop="55dp"
         android:background="@drawable/input"
-        android:backgroundTintMode="add"
         android:ems="10"
-        android:hint="Fullname"
-        android:inputType="text"
+        android:text="Fullname"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/black"
-        android:textColorHint="#ACACAC"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
