--- a/app/src/main/res/layout/activity_lung_doc4.xml
+++ b/app/src/main/res/layout/activity_lung_doc4.xml
@@ -5,51 +5,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bback"
-    tools:context=".shared_doc1">
+    android:background="@drawable/lungback"
+    tools:context=".lung_doc4">
 
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="347dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="201dp"
-        android:transitionName="imagetransaction"
-        app:srcCompat="@drawable/pic1" />
+        android:layout_marginStart="154dp"
+        android:layout_marginTop="42dp"
+        android:transitionName="imagetransaction4"
+        app:srcCompat="@drawable/lung_pic4" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageView5"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="-200dp"
-        android:layout_marginTop="109dp"
-        android:layout_marginBottom="270dp"
-        android:layout_toEndOf="@+id/imageView5"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="93dp"
         android:foregroundGravity="center"
         android:gravity="center"
-        android:text="Dr. Nermin Diab"
+        android:text="Dr. Maged Habib "
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:transitionName="nametransaction" />
+        android:transitionName="nametransaction4" />
 
     <TextView
-        android:id="@+id/textView32"
+        android:id="@+id/textView35"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView6"
-        android:layout_marginStart="-200dp"
-        android:layout_marginTop="-250dp"
-        android:layout_toEndOf="@+id/imageView5"
-        android:text="Kidney and diabetes consultant
-Nephrologist specialized in Adult Diabetes, Adult Endocrinology and Adult Nephrology."
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="-185dp"
+        android:layout_toStartOf="@+id/imageView5"
+        android:text="Consultant of Nephrology, Diabetes,
+         Internal Medicine, Immunology and Thyroid Diseases
+         (Nephrologist specialized in adult diabetes and endocrinology, general internal medicine and adult nephrology)
+"
         android:textColor="@color/gray"
         android:textSize="16sp"
-        android:transitionName="desctransaction" />
+        android:transitionName="desctransaction4" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -89,7 +91,7 @@ Nephrologist specialized in Adult Diabetes, Adult Endocrinology and Adult Nephro
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView8"
-        android:text="150 EGP"
+        android:text="300 EGP"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
@@ -102,12 +104,11 @@ Nephrologist specialized in Adult Diabetes, Adult Endocrinology and Adult Nephro
         android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
 
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="17dp"
         android:layout_toEndOf="@+id/imageView7"
-        android:text="New Cairo (Settlement) Edrak Clinics,
-Street 15, District One - Fifth Settlement, Medical Park 1
- - in front of the Courts Complex - next to 7 Stars Mall"
+        android:text="Street 105, Cairo, Maadi
+"
         android:textColor="@color/black"
         android:textStyle="normal" />
 
@@ -119,8 +120,10 @@ Street 15, District One - Fifth Settlement, Medical Park 1
         android:layout_marginStart="23dp"
         android:layout_marginTop="40dp"
         android:layout_toEndOf="@+id/imageView"
-        android:text="01201111344"
+        android:text="02 25262688"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
+
+
 </RelativeLayout>
