--- a/app/src/main/res/layout/activity_lung_doc5.xml
+++ b/app/src/main/res/layout/activity_lung_doc5.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bback"
-    tools:context=".shared_doc1">
+    android:background="@drawable/lungback"
+    tools:context=".lung_doc5">
 
     <ImageView
         android:id="@+id/imageView5"
@@ -16,8 +16,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="59dp"
         android:layout_marginEnd="201dp"
-        android:transitionName="imagetransaction"
-        app:srcCompat="@drawable/pic1" />
+        android:transitionName="imagetransaction5"
+        app:srcCompat="@drawable/lung_pic5" />
 
     <TextView
         android:id="@+id/textView6"
@@ -35,7 +35,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:transitionName="nametransaction" />
+        android:transitionName="nametransaction5" />
 
     <TextView
         android:id="@+id/textView32"
@@ -49,7 +49,7 @@
 Nephrologist specialized in Adult Diabetes, Adult Endocrinology and Adult Nephrology."
         android:textColor="@color/gray"
         android:textSize="16sp"
-        android:transitionName="desctransaction" />
+        android:transitionName="desctransaction5" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -123,4 +123,6 @@ Street 15, District One - Fifth Settlement, Medical Park 1
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="normal" />
+
+
 </RelativeLayout>
