--- a/app/src/main/res/layout/activity_choose_field.xml
+++ b/app/src/main/res/layout/activity_choose_field.xml
@@ -171,7 +171,7 @@
                     <ImageView
                         android:layout_width="350dp"
                         android:layout_height="360dp"
-                        android:src="@drawable/skin" />
+                        android:src="@drawable/skin_icon" />
 
 
                 </LinearLayout>
